src/human_study/program_32/python_err_msg.txt
File "./seq2parse/human_study/program_32/original.py", line 4
    even bigger(12)
         ^^^^^^
SyntaxError: invalid syntax
